# maev-mirror

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  engine  gameTemplate.py  helloworld  helloworld.cpp
definitions/: maevVec.cpp  maevVec.hpp
games/: game.py
games/dochs/: arena.py  enemy.py  layers.py  mvania.py  particles.py  platform.py  player.py  rounds.py  spike.py  title.py  tutorial.py  waves.py
games/platfomer/: platformer.py
games/platformer/: game.py
games/racing/: asteroid.py  camera.py  controlBlock.py  controls.py  game.py  gameOver.py  run.py  state.py  title.py
games/shooter/: game.py
games/testing/: game.py
src/: .vector.cpp.swp  .vector.h.swp  audio_handler.cpp  audio_handler.h  box_collider.cpp  box_collider.hpp  box_collider_handler.cpp  box_collider_handler.hpp  callback_handler.cpp  callback_handler.h  camera_handler.cpp  camera_handler.hpp  collision.cpp  collision.hpp  collision_layers.cpp  collision_layers.h  common_helpers.h  consts.h  engine  engine.cpp  keyboard.cpp  keyboard.h  makefile  object_handler.cpp  object_handler.h  rigid_body.cpp  rigid_body.h  rigid_body_handler.cpp  rigid_body_handler.h  text_handler.cpp  text_handler.h  vector.cpp  vector.h  window_handler.cpp  window_handler.h
src/physics/: aabb.cpp  aabb.hpp  circle.cpp  circle.hpp  hittable.cpp  hittable.hpp  polygon.cpp  polygon.hpp  rectangle.cpp  rectangle.hpp
